--- a/Bandhan 2k25/index.html
+++ b/Bandhan 2k25/index.html
@@ -261,6 +261,12 @@
                        <div id="spot-events-container" class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8">
                              </div>
                 </div>
+
+                <div class="animated">
+                       <h3 class="font-poppins text-sm md:text-base font-bold text-amber-400 mb-8 text-center">Creative Events</h3>
+                       <div id="creative-events-container" class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+                             </div>
+                </div>
             </div>
         </section>
 
@@ -331,7 +337,7 @@
         <section id="contact" class="py-20 md:py-28 bg-neutral-900">
             <div class="container mx-auto px-6">
                 <h2 class="section-title font-poppins text-base md:text-lg font-bold text-center mb-12 animated">Event Coordinators</h2>
-                <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
+                <div class="grid md:grid-cols-2 lg:grid-cols-5 gap-8">
                        <div class="coordinator-card bg-gradient-to-br from-black/40 to-neutral-900/60 p-6 rounded-xl border-2 border-neutral-700 hover:border-amber-500 h-full flex flex-col animated backdrop-blur-sm">
                              <div class="flex items-center mb-4">
                                 <div class="w-8 h-8 bg-amber-500 rounded-full flex items-center justify-center mr-3">
@@ -390,6 +396,21 @@
                              <div class="border-t border-neutral-600 pt-4">
                                 <p class="font-bold text-xs md:text-sm text-white">K. Venkat Sai</p>
                                 <a href="tel:8142200325" class="text-amber-400 hover:text-amber-300 text-xs md:text-sm transition-colors">📞 8142200325</a>
+                             </div>
+                       </div>
+                       <div class="coordinator-card bg-gradient-to-br from-black/40 to-neutral-900/60 p-6 rounded-xl border-2 border-neutral-700 hover:border-amber-500 h-full flex flex-col animated backdrop-blur-sm">
+                             <div class="flex items-center mb-4">
+                                <div class="w-8 h-8 bg-amber-500 rounded-full flex items-center justify-center mr-3">
+                                    <svg class="w-4 h-4 text-black" fill="currentColor" viewBox="0 0 20 20">
+                                        <path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
+                                    </svg>
+                                </div>
+                                <h3 class="font-poppins text-sm md:text-base font-bold text-amber-400">Creative Events</h3>
+                             </div>
+                             <p class="text-neutral-300 flex-grow text-xs md:text-sm mb-4">For queries related to Photography, Videography, Meme Creation, etc.</p>
+                             <div class="border-t border-neutral-600 pt-4">
+                                <p class="font-bold text-xs md:text-sm text-white">V. Chaitanya</p>
+                                <a href="tel:7799275797" class="text-amber-400 hover:text-amber-300 text-xs md:text-sm transition-colors">📞 7799275797</a>
                              </div>
                        </div>
                 </div>
@@ -658,7 +679,35 @@
                 summary: "Engage in quick, fun challenges like Musical Chairs, Memory Games, and Puzzles. Quick wit wins!",
                 description: "A series of fun-filled mini-games to test memory, speed, and quick thinking.",
                 rules: ["Includes Musical Chairs, quick memory recall tasks, riddles, and puzzles", "Time-based scoring", "Accuracy + Speed will decide winners"],
-                formLink: "YOUR_GOOGLE_FORM_URL_FOR_FUN_AND_GAMES"
+            }
+        ];
+        const creativeEvents = [
+            { 
+                icon: `<svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 mx-auto" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 9a2 2 0 012-2h.93a2 2 0 001.664-.89l.812-1.22A2 2 0 0110.07 4h3.86a2 2 0 011.664.89l.812 1.22A2 2 0 0018.07 7H19a2 2 0 012 2v9a2 2 0 01-2 2H5a2 2 0 01-2-2V9z" /><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 13a3 3 0 11-6 0 3 3 0 016 0z" /></svg>`,
+                title: "Photography Contest",
+                summary: "Capture the world through your lens. Theme will be announced on the day of the event.",
+                description: "A photography contest to showcase creativity and artistic vision through original captured images.",
+                rules: ["Individual participation", "Photos must be original and captured by the participant", "Editing is allowed but should not alter the originality", "Submissions must be made before the deadline", "Plagiarism or copied images will lead to disqualification"],
+                judging: ["Creativity", "Relevance to theme", "Presentation"],
+                formLink: "YOUR_GOOGLE_FORM_URL_FOR_PHOTOGRAPHY"
+            },
+            { 
+                icon: `<svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 mx-auto" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 10l4.553-2.276A1 1 0 0121 8.618v6.764a1 1 0 01-1.447.894L15 14M5 18h8a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v8a2 2 0 002 2z" /></svg>`,
+                title: "Videography Contest",
+                summary: "Tell your story through moving images. Theme will be given prior to the event.",
+                description: "A videography contest where participants create original video content based on a given theme.",
+                rules: ["Individual / Team participation (max 3 members)", "Video length: TBD", "Original work only (no downloading from internet)", "Background music/voiceover is allowed", "Should be submitted in MP4 format"],
+                judging: ["Storytelling", "Creativity", "Technical quality"],
+                formLink: "YOUR_GOOGLE_FORM_URL_FOR_VIDEOGRAPHY"
+            },
+            { 
+                icon: `<svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 mx-auto" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14.828 14.828a4 4 0 01-5.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>`,
+                title: "Meme Creation",
+                summary: "Make the world laugh with your creative memes. Original content only!",
+                description: "A fun contest to create original, humorous memes based on a given theme or topic.",
+                rules: ["Individual participation", "Memes must be original and not offensive", "Can be static image or short GIF", "Theme/topic will be provided", "Submissions via online form / email within time limit"],
+                judging: ["Humor", "Creativity", "Relatability"],
+                formLink: "YOUR_GOOGLE_FORM_URL_FOR_MEME_CREATION"
             }
         ];
 
@@ -744,13 +793,6 @@
                 <div class="relative">
                     <img src="${event.img}" alt="${event.name || event.title}" class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-500" />
                     <div class="absolute inset-0 bg-gradient-to-t from-black/90 via-black/50 to-transparent"></div>
-                    <div class="absolute top-2 right-2">
-                        <div class="w-6 h-6 bg-amber-500 rounded-full flex items-center justify-center">
-                            <svg class="w-3 h-3 text-black" fill="currentColor" viewBox="0 0 20 20">
-                                <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"/>
-                            </svg>
-                        </div>
-                    </div>
                     <h4 class="absolute bottom-2 left-2 right-2 font-poppins text-xs md:text-sm font-bold text-white drop-shadow-lg">${event.name || event.title}</h4>
                 </div>
             `;
@@ -763,7 +805,8 @@
             { id: 'non-technical-events-container', data: nonTechnicalEvents, cardFn: createEventCard },
             { id: 'outdoor-sports-container', data: outdoorSports, cardFn: createSportCard },
             { id: 'indoor-sports-container', data: indoorSports, cardFn: createSportCard },
-            { id: 'spot-events-container', data: spotEvents, cardFn: createEventCard }
+            { id: 'spot-events-container', data: spotEvents, cardFn: createEventCard },
+            { id: 'creative-events-container', data: creativeEvents, cardFn: createEventCard }
         ];
         
         eventSectionsToPopulate.forEach(section => {
