--- a/Bandhan 2k25/index.html
+++ b/Bandhan 2k25/index.html
@@ -8,15 +8,7 @@
     <link rel="icon" href="/images/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
     
-    <script src="https://cdn.tailwindcss.com"><            {
-                icon: `<svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 mx-auto" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4" /></svg>`,
-                title: "AlgoWars",
-                summary: "An individual coding competition to solve a series of algorithmic challenges against the clock. For C, C++, Java, Python lovers.",
-                description: "A programming contest where students solve problems ranging from beginner to advanced within the given time.",
-                rules: ["Individual participation", "Languages: C, C++, Java, Python", "Questions range from Easy to Hard"],
-                judging: ["Correctness", "Efficiency", "Time Taken"],
-                formLink: "YOUR_GOOGLE_FORM_URL_FOR_ALGOWARS"
-            },
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Poppins:wght@400;600;700;800&family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
@@ -472,7 +464,7 @@
                 description: "A programming contest where students solve problems ranging from beginner to advanced within the given time.",
                 rules: ["Individual participation", "Languages: C, C++, Java, Python", "Questions range from Easy to Hard"],
                 judging: ["Correctness", "Efficiency", "Time Taken"],
-                formLink: "https://forms.gle/aNYYykrNZ6huCsge6"
+                formLink: "YOUR_GOOGLE_FORM_URL_FOR_ALGOWARS"
             },
             {
                 icon: `<svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 mx-auto" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 3v2m6-2v2M9 19v2m6-2v2M5 9H3m2 6H3m18-6h-2m2 6h-2M12 6V3m0 18v-3" /><circle cx="12" cy="12" r="4" /></svg>`,
