--- a/Bandhan 2k25/index.html
+++ b/Bandhan 2k25/index.html
@@ -163,7 +163,7 @@
         <div class="container mx-auto px-6 py-4">
             <nav class="flex justify-between items-center">
                 <a href="#home" class="text-white">
-                    <img src="/images/logo.png" alt="Aikya 2K25 Logo" class="w-auto h-14">
+                    <img src="/images/logo.png" alt="Aikya 2K25 Logo" class="w-auto h-14 border-0">
                 </a>
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="#home" class="nav-link active relative">Home</a>
