added new changes

--- a/Bandhan 2k25/index.html
+++ b/Bandhan 2k25/index.html
@@ -552,7 +552,7 @@
             { 
                 title: "Volleyball", 
                 name: "Volleyball", 
-                img: "/images/Volley-ball.png", 
+                img: "./images/Volley-ball.png", 
                 description: "A team sport where two teams are separated by a net and try to score points by grounding the ball on the opponent's court.",
                 rules: ["Team Size: 6 players + 2 substitutes", "Best of 3 sets (25 points)", "Knockout format", "Standard volleyball rules"],
                 formLink: "YOUR_GOOGLE_FORM_URL_FOR_VOLLEYBALL"
