--- a/Bandhan 2k25/index.html
+++ b/Bandhan 2k25/index.html
@@ -514,7 +514,7 @@
                 description: "A technical quiz designed to test knowledge of electrical, electronic, and mechanical components.",
                 rules: ["Team size: 1 member", "Open to all departments", "Rounds: Identification, Application, Rapid Fire"],
                 judging: ["Scoring based on cumulative points across rounds"],
-                formLink: "YOUR_GOOGLE_FORM_URL_FOR_BRAIN_ACE"
+                formLink: "https://forms.gle/3cPdvVkkMquZhuEV7"
             }
         ];
         const nonTechnicalEvents = [
