--- a/Bandhan 2k25/index.html
+++ b/Bandhan 2k25/index.html
@@ -455,7 +455,7 @@
                 description: "A platform for students to present and share their views on trending technologies or innovative ideas. Each participant will speak for 2-3 minutes on a given or chosen technical topic.",
                 rules: ["Individual participation", "Time limit: 2-3 minutes", "Topics can be given in advance or chosen with approval"],
                 judging: ["Content & Relevance", "Clarity of Speech & Confidence", "Creativity & Presentation", "Two awards: Judges' Choice & Popular Choice"],
-                formLink: "https://forms.gle/Pszsj5HN1wAQa1As9"
+                formLink: "https://forms.gle/LTLK4bfcDvg8VRE37"
             },
             {
                 icon: `<svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 mx-auto" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 7h6m0 10v-3m-3 3h.01M9 17h.01M9 14h.01M12 14h.01M15 14h.01M12 11h.01M12 8h.01M15 8h.01M9 8h.01M4 4h16v16H4V4z" /></svg>`,
@@ -491,7 +491,7 @@
                 description: "A technical quiz designed to test knowledge of electrical, electronic, and mechanical components.",
                 rules: ["Team size: 2 members", "Open to all departments", "Rounds: Identification, Application, Rapid Fire"],
                 judging: ["Scoring based on cumulative points across rounds"],
-                formLink: "YOUR_GOOGLE_FORM_URL_FOR_BRAIN_ACE"
+                formLink: "https://forms.gle/gk73ftyEkF9Y8pru9"
             }
         ];
         const nonTechnicalEvents = [
