--- a/Bandhan 2k25/index.html
+++ b/Bandhan 2k25/index.html
@@ -583,7 +583,7 @@
             {
                 title: "Ball Badminton",
                 name: "Ball Badminton",
-                img: "https://placehold.co/600x600/1e293b/a1a1aa?text=Ball+Badminton",
+                img: "/images/Ball-Badminton.png",
                 description: "A team sport similar to badminton, but played with a yellow ball and racquets.",
                 rules: ["Team size: 5 players", "Standard Ball Badminton Federation rules apply"],
                 formLink: "YOUR_GOOGLE_FORM_URL_FOR_BALL_BADMINTON"
