--- a/Bandhan 2k25/index.html
+++ b/Bandhan 2k25/index.html
@@ -591,7 +591,7 @@
             {
                 title: "Dodgeball",
                 name: "Dodgeball",
-                img: "https://placehold.co/600x600/1e293b/a1a1aa?text=Dodgeball",
+                img: "/images/Dodgeball.png",
                 description: "A game where players on two opposing teams try to throw balls at each other while avoiding being hit.",
                 rules: ["Team Size: 6 players", "Knockout format", "Standard Dodgeball rules apply"],
                 formLink: "YOUR_GOOGLE_FORM_URL_FOR_DODGEBALL"
