--- a/Bandhan 2k25/index.html
+++ b/Bandhan 2k25/index.html
@@ -599,7 +599,7 @@
             {
                 title: "Yedu Penkulu",
                 name: "Yedu Penkulu",
-                img: "https://placehold.co/600x600/1e293b/a1a1aa?text=Yedu+Penkulu",
+                img: "/images/Yedu Penkulu.png",
                 description: "A traditional game played with seven flat stones, a ball, and two teams.",
                 rules: ["Team Size: 5-7 players", "Two teams: one hitter, one fielder", "Knockout format"],
                 formLink: "YOUR_GOOGLE_FORM_URL_FOR_YEDU_PENKULU"
