opened badminton registrations

--- a/Bandhan 2k25/index.html
+++ b/Bandhan 2k25/index.html
@@ -578,7 +578,7 @@
                 img: "/images/Badminton.png", 
                 description: "A racquet sport played with a shuttlecock across a net.",
                 rules: ["Team Event (Doubles)", "Team Size: 5 players", "Best of 3 sets (21 points)", "Standard BWF rules"],
-                formLink: "YOUR_GOOGLE_FORM_URL_FOR_BADMINTON"
+                formLink: "https://forms.gle/tBfj5keDxEHk5Dz4A"
             },
             {
                 title: "Ball Badminton",
