updates in rules

--- a/Bandhan 2k25/index.html
+++ b/Bandhan 2k25/index.html
@@ -577,7 +577,7 @@
                 name: "Badminton", 
                 img: "/images/Badminton.png", 
                 description: "A racquet sport played with a shuttlecock across a net.",
-                rules: ["Team Event (Doubles)", "Team Size: 5 players", "Best of 3 sets (21 points)", "Standard BWF rules"],
+                rules: ["TBD"],
                 formLink: "https://forms.gle/tBfj5keDxEHk5Dz4A"
             },
             {
