updated essay writing

--- a/Bandhan 2k25/index.html
+++ b/Bandhan 2k25/index.html
@@ -525,7 +525,7 @@
                 description: "A competition to evaluate the writing skills, creativity, and ability to express thoughts effectively on a given topic.",
                 rules: ["Individual participation", "Time limit: 45 minutes", "Topics provided on the spot", "Medium: English only"],
                 judging: ["Content", "Creativity", "Language", "Grammar", "Structure"],
-                formLink: "YOUR_GOOGLE_FORM_URL_FOR_ESSAY_WRITING"
+                formLink: "https://forms.gle/Dh5Vb8vSx7ES76Ho7"
             },
             {
                 icon: `<svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 mx-auto" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a2 2 0 01-2-2V7a2 2 0 012-2h4m3 0a5 5 0 00-10 0v1" /></svg>`,
