updates in the registrations code

--- a/Bandhan 2k25/index.html
+++ b/Bandhan 2k25/index.html
@@ -798,7 +798,7 @@
         };
         
         const isRegistrationAvailable = (event) => {
-             return event.formLink && !event.formLink.includes('YOUR_GOOGLE_FORM_URL');
+             return event.formLink && !event.formLink.includes('YOUR_GOOGLE_FORM_URL') && !event.formLink.includes('REGISTRATIONS_CLOSED');
         };
 
         const createEventCard = (event) => {
@@ -897,10 +897,11 @@
                     </div>
                 `;
             } else {
+                const buttonText = event.formLink && event.formLink.includes('REGISTRATIONS_CLOSED') ? 'Registration Closed' : 'Registration Coming Soon';
                 registrationButtonHTML = `
                     <div class="mt-6 text-center border-t border-neutral-700 pt-4">
                         <button disabled class="bg-neutral-800 text-neutral-500 font-bold py-2 px-8 rounded-lg cursor-not-allowed">
-                            Registration Coming Soon
+                            ${buttonText}
                         </button>
                     </div>
                 `;
