--- a/Bandhan 2k25/index.html
+++ b/Bandhan 2k25/index.html
@@ -202,7 +202,7 @@
         <div class="container mx-auto px-6 py-4">
             <nav class="flex justify-between items-center">
                 <a href="#home" class="text-white">
-                    <img src="/images/logo.png" alt="Aikya 2K25 Logo" class="w-auto h-14 border-0">
+                    <img src="images/logo.png" alt="Aikya 2K25 Logo" class="w-auto h-14 border-0">
                 </a>
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="#home" class="nav-link active relative">Home</a>
@@ -469,7 +469,7 @@
                 description: "A 6-hour hackathon where students brainstorm, design, and implement innovative solutions to real-world problems.",
                 rules: ["Team Size: 2-4 members", "Open to all departments", "Problem statements announced at the beginning", "Use any language, tool, or framework.", "Duration: 5:00 PM - 11:00 PM"],
                 judging: ["Innovation & Creativity", "Feasibility of Solution", "Technical Implementation", "Presentation & Teamwork"],
-                formLink: "YOUR_GOOGLE_FORM_URL_FOR_CODESPRINT"
+                formLink: "https://forms.gle/QQhPWm5rqusH2zTP8"
             },
             {
                 icon: `<svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 mx-auto" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8s-9-3.582-9-8 4.03-8 9-8 9 3.582 9 8z" /></svg>`,
@@ -478,7 +478,7 @@
                 description: "A platform for students to present and share their views on trending technologies or innovative ideas. Each participant will speak for 2-3 minutes on a given or chosen technical topic.",
                 rules: ["Individual participation", "Time limit: 2-3 minutes", "Topics can be given in advance or chosen with approval"],
                 judging: ["Content & Relevance", "Clarity of Speech & Confidence", "Creativity & Presentation", "Two awards: Judges' Choice & Popular Choice"],
-                formLink: "REGISTRATIONS_CLOSED"
+                formLink: "https://forms.gle/bPB8AHUx9LLsW89M6"
             },
             {
                 icon: `<svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 mx-auto" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 7h6m0 10v-3m-3 3h.01M9 17h.01M9 14h.01M12 14h.01M15 14h.01M12 11h.01M12 8h.01M15 8h.01M9 8h.01M4 4h16v16H4V4z" /></svg>`,
@@ -514,7 +514,7 @@
                 description: "A technical quiz designed to test knowledge of electrical, electronic, and mechanical components.",
                 rules: ["Team size: 1 member", "Open to all departments", "Rounds: Identification, Application, Rapid Fire"],
                 judging: ["Scoring based on cumulative points across rounds"],
-                formLink: "REGISTRATIONS_CLOSED"
+                formLink: "https://forms.gle/BpZ3bkUfHzVJGBVt9"
             }
         ];
         const nonTechnicalEvents = [
@@ -525,7 +525,7 @@
                 description: "A competition to evaluate the writing skills, creativity, and ability to express thoughts effectively on a given topic.",
                 rules: ["Individual participation", "Time limit: 45 minutes", "Topics provided on the spot", "Medium: English only"],
                 judging: ["Content", "Creativity", "Language", "Grammar", "Structure"],
-                formLink: "https://forms.gle/Dh5Vb8vSx7ES76Ho7"
+                formLink: "YOUR_GOOGLE_FORM_URL_FOR_ESSAY_WRITING"
             },
             {
                 icon: `<svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 mx-auto" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a2 2 0 01-2-2V7a2 2 0 012-2h4m3 0a5 5 0 00-10 0v1" /></svg>`,
@@ -577,13 +577,13 @@
                 name: "Badminton", 
                 img: "/images/Badminton.png", 
                 description: "A racquet sport played with a shuttlecock across a net.",
-                rules: ["TBD"],
-                formLink: "https://forms.gle/tBfj5keDxEHk5Dz4A"
+                rules: ["Team Event (Doubles)", "Team Size: 5 players", "Best of 3 sets (21 points)", "Standard BWF rules"],
+                formLink: "YOUR_GOOGLE_FORM_URL_FOR_BADMINTON"
             },
             {
                 title: "Ball Badminton",
                 name: "Ball Badminton",
-                img: "/images/Ball-Badminton.png",
+                img: "https://placehold.co/600x600/1e293b/a1a1aa?text=Ball+Badminton",
                 description: "A team sport similar to badminton, but played with a yellow ball and racquets.",
                 rules: ["Team size: 5 players", "Standard Ball Badminton Federation rules apply"],
                 formLink: "YOUR_GOOGLE_FORM_URL_FOR_BALL_BADMINTON"
@@ -591,7 +591,7 @@
             {
                 title: "Dodgeball",
                 name: "Dodgeball",
-                img: "/images/Dodgeball.png",
+                img: "https://placehold.co/600x600/1e293b/a1a1aa?text=Dodgeball",
                 description: "A game where players on two opposing teams try to throw balls at each other while avoiding being hit.",
                 rules: ["Team Size: 6 players", "Knockout format", "Standard Dodgeball rules apply"],
                 formLink: "YOUR_GOOGLE_FORM_URL_FOR_DODGEBALL"
@@ -599,7 +599,7 @@
             {
                 title: "Yedu Penkulu",
                 name: "Yedu Penkulu",
-                img: "/images/Yedu-Penkulu.png",
+                img: "https://placehold.co/600x600/1e293b/a1a1aa?text=Yedu+Penkulu",
                 description: "A traditional game played with seven flat stones, a ball, and two teams.",
                 rules: ["Team Size: 5-7 players", "Two teams: one hitter, one fielder", "Knockout format"],
                 formLink: "YOUR_GOOGLE_FORM_URL_FOR_YEDU_PENKULU"
@@ -798,7 +798,7 @@
         };
         
         const isRegistrationAvailable = (event) => {
-             return event.formLink && !event.formLink.includes('YOUR_GOOGLE_FORM_URL') && !event.formLink.includes('REGISTRATIONS_CLOSED');
+             return event.formLink && !event.formLink.includes('YOUR_GOOGLE_FORM_URL');
         };
 
         const createEventCard = (event) => {
@@ -897,11 +897,10 @@
                     </div>
                 `;
             } else {
-                const buttonText = event.formLink && event.formLink.includes('REGISTRATIONS_CLOSED') ? 'Registration Closed' : 'Registration Coming Soon';
                 registrationButtonHTML = `
                     <div class="mt-6 text-center border-t border-neutral-700 pt-4">
                         <button disabled class="bg-neutral-800 text-neutral-500 font-bold py-2 px-8 rounded-lg cursor-not-allowed">
-                            ${buttonText}
+                            Registration Coming Soon
                         </button>
                     </div>
                 `;
@@ -950,4 +949,3 @@
     </script>
 </body>
 </html>
-`
