--- a/Bandhan 2k25/index.html
+++ b/Bandhan 2k25/index.html
@@ -591,7 +591,7 @@
             {
                 title: "Dodgeball",
                 name: "Dodgeball",
-                img: "https://placehold.co/600x600/1e293b/a1a1aa?text=Dodgeball",
+                img: "/images/Dodge ball.png",
                 description: "A game where players on two opposing teams try to throw balls at each other while avoiding being hit.",
                 rules: ["Team Size: 6 players", "Knockout format", "Standard Dodgeball rules apply"],
                 formLink: "YOUR_GOOGLE_FORM_URL_FOR_DODGEBALL"
@@ -599,7 +599,7 @@
             {
                 title: "Yedu Penkulu",
                 name: "Yedu Penkulu",
-                img: "https://placehold.co/600x600/1e293b/a1a1aa?text=Yedu+Penkulu",
+                img: "/images/Yedu Penkulu.png",
                 description: "A traditional game played with seven flat stones, a ball, and two teams.",
                 rules: ["Team Size: 5-7 players", "Two teams: one hitter, one fielder", "Knockout format"],
                 formLink: "YOUR_GOOGLE_FORM_URL_FOR_YEDU_PENKULU"
