--- a/Bandhan 2k25/index.html
+++ b/Bandhan 2k25/index.html
@@ -570,7 +570,7 @@
                 img: "/images/Basket-ball.png", 
                 description: "A fast-paced team sport where two teams try to score by shooting a ball through the opposing team's hoop.",
                 rules: ["Team Size: 5 players + 2 substitutes", "Half-court or Full-court format", "Match: 2 halves of 10 mins each", "Standard basketball rules apply"],
-                formLink: "YOUR_GOOGLE_FORM_URL_FOR_BASKETBALL"
+                formLink: "https://forms.gle/qHt2S8ZSmsBvwtdX9"
             },
             { 
                 title: "Badminton", 
