--- a/Bandhan 2k25/index.html
+++ b/Bandhan 2k25/index.html
@@ -594,7 +594,7 @@
                 img: "/images/Dodgeball.png",
                 description: "A game where players on two opposing teams try to throw balls at each other while avoiding being hit.",
                 rules: ["Team Size: 6 players", "Knockout format", "Standard Dodgeball rules apply"],
-                formLink: "YOUR_GOOGLE_FORM_URL_FOR_DODGEBALL"
+                formLink: "https://forms.gle/Qrgpr3H8padnCuyj6"
             },
             {
                 title: "Yedu Penkulu",
