--- a/Bandhan 2k25/index.html
+++ b/Bandhan 2k25/index.html
@@ -569,7 +569,7 @@
                 name: "Basketball", 
                 img: "/images/Basket-ball.png", 
                 description: "A fast-paced team sport where two teams try to score by shooting a ball through the opposing team's hoop.",
-                rules: ["Team Size: 5 players + 2 substitutes", "Half-court or Full-court format", "Match: 2 halves of 10 mins each", "Standard basketball rules apply"],
+                rules: [ "Standard basketball rules apply"],
                 formLink: "https://forms.gle/qHt2S8ZSmsBvwtdX9"
             },
             { 
@@ -593,7 +593,7 @@
                 name: "Dodgeball",
                 img: "/images/Dodgeball.png",
                 description: "A game where players on two opposing teams try to throw balls at each other while avoiding being hit.",
-                rules: ["Team Size: 6 players", "Knockout format", "Standard Dodgeball rules apply"],
+                rules: [ "Standard Dodgeball rules apply"],
                 formLink: "https://forms.gle/Qrgpr3H8padnCuyj6"
             },
             {
